[gd_scene load_steps=14 format=3 uid="uid://cx8dd1jlvsuc6"]

[ext_resource type="Script" path="res://GUI/pause_menu/pause_menu.gd" id="1_jbu2v"]
[ext_resource type="Texture2D" uid="uid://inrfwunr0c35" path="res://Items/sprites/items.png" id="2_kfcru"]
[ext_resource type="Script" path="res://GUI/pause_menu/inventory/scripts/inventory_ui.gd" id="3_2augc"]
[ext_resource type="PackedScene" uid="uid://d3j8fwgxepjfb" path="res://GUI/pause_menu/inventory/inventory_slot.tscn" id="3_rh4x3"]
[ext_resource type="Resource" uid="uid://2aqw6kc6o01l" path="res://GUI/pause_menu/inventory/player_inventory.tres" id="4_1vk5r"]
[ext_resource type="Script" path="res://GUI/pause_menu/quests_ui.gd" id="6_bg3nu"]
[ext_resource type="PackedScene" uid="uid://bh5kk7gdkv36s" path="res://GUI/pause_menu/quests/quest_item.tscn" id="6_fekpl"]
[ext_resource type="FontFile" uid="uid://bkgabhmtxgeg5" path="res://assets/npc_and_dialog/npc_and_dialog/fonts/Abaddon Bold.ttf" id="6_px3yn"]
[ext_resource type="PackedScene" uid="uid://b6hshym1flwxs" path="res://GUI/pause_menu/stats/stats.tscn" id="6_ubj40"]
[ext_resource type="FontFile" uid="uid://cp5b7m5v7msl7" path="res://GUI/fonts/m5x7.ttf" id="7_wlvfh"]
[ext_resource type="PackedScene" uid="uid://drxhdey6lpsgm" path="res://GUI/pause_menu/quests/quest_step_item.tscn" id="10_3ec1v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gn2rq"]
atlas = ExtResource("2_kfcru")
region = Rect2(96, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lgu70"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = SubResource("AtlasTexture_gn2rq")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_jbu2v")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.160784, 0.160784, 0.160784, 0.823529)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control"]
max_polyphony = 4

[node name="TabContainer" type="TabContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1
current_tab = 0

[node name="Inventory" type="Control" parent="Control/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="PanelContainer" type="PanelContainer" parent="Control/TabContainer/Inventory"]
layout_mode = 0
offset_left = 28.0
offset_top = 30.0
offset_right = 224.0
offset_bottom = 118.0
theme_override_styles/panel = SubResource("StyleBoxTexture_lgu70")

[node name="GridContainer" type="GridContainer" parent="Control/TabContainer/Inventory/PanelContainer"]
layout_mode = 2
columns = 5
script = ExtResource("3_2augc")
data = ExtResource("4_1vk5r")

[node name="InventorySlot" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_rh4x3")]
layout_mode = 2

[node name="InventorySlot2" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_rh4x3")]
layout_mode = 2

[node name="InventorySlot3" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_rh4x3")]
layout_mode = 2

[node name="InventorySlot4" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_rh4x3")]
layout_mode = 2

[node name="InventorySlot5" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_rh4x3")]
layout_mode = 2

[node name="InventorySlot6" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_rh4x3")]
layout_mode = 2

[node name="Stats" parent="Control/TabContainer/Inventory" instance=ExtResource("6_ubj40")]
layout_mode = 0
offset_left = 258.0
offset_top = 30.0
offset_right = 452.0
offset_bottom = 134.0

[node name="ItemDescription" type="Label" parent="Control/TabContainer/Inventory"]
modulate = Color(0.907942, 0.907942, 0.907942, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -210.0
offset_top = 122.0
offset_right = -20.0
offset_bottom = 177.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
autowrap_mode = 2

[node name="Quests" type="Control" parent="Control/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("6_bg3nu")
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Control/TabContainer/Quests"]
layout_mode = 0
offset_left = 14.0
offset_top = 14.0
offset_right = 234.0
offset_bottom = 214.0
follow_focus = true
scroll_vertical_custom_step = 100.0
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/TabContainer/Quests/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="QuestItem" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("6_fekpl")]
layout_mode = 2

[node name="QuestItem2" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("6_fekpl")]
layout_mode = 2

[node name="QuestItem3" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("6_fekpl")]
layout_mode = 2

[node name="QuestItem4" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("6_fekpl")]
layout_mode = 2

[node name="QuestItem5" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("6_fekpl")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/Quests"]
layout_mode = 0
offset_left = 250.0
offset_top = 17.0
offset_right = 465.0
offset_bottom = 61.0

[node name="TitleLabel" type="Label" parent="Control/TabContainer/Quests/VBoxContainer"]
custom_minimum_size = Vector2(215, 10)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_px3yn")
text = "Quest Title"
autowrap_mode = 2

[node name="DescriptionLabel" type="Label" parent="Control/TabContainer/Quests/VBoxContainer"]
modulate = Color(0.609, 0.609, 0.609, 1)
custom_minimum_size = Vector2(215, 10)
layout_mode = 2
theme_override_fonts/font = ExtResource("7_wlvfh")
text = "Quest description "
autowrap_mode = 2

[node name="SpacerControl" type="Control" parent="Control/TabContainer/Quests/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="QuestStepItem" parent="Control/TabContainer/Quests/VBoxContainer" instance=ExtResource("10_3ec1v")]
layout_mode = 2

[node name="QuestStepItem2" parent="Control/TabContainer/Quests/VBoxContainer" instance=ExtResource("10_3ec1v")]
layout_mode = 2

[node name="QuestStepItem3" parent="Control/TabContainer/Quests/VBoxContainer" instance=ExtResource("10_3ec1v")]
layout_mode = 2

[node name="System" type="Control" parent="Control/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/System"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -65.0
offset_right = 48.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button_Save" type="Button" parent="Control/TabContainer/System/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Button_Load" type="Button" parent="Control/TabContainer/System/VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="Button_Quit" type="Button" parent="Control/TabContainer/System/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Label" type="Label" parent="Control"]
modulate = Color(0.513726, 0.513726, 0.513726, 0.862745)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -229.0
offset_top = 6.0
offset_right = -153.0
offset_bottom = 29.0
grow_horizontal = 2
text = "[ paused ]"
